# my-firstgame-use-pygame

./: README.md  actions.py  collision.py  first-game.py  load_animation.py  load_map.py  main.py  play.py  pyproject.toml
maps/: map.txt
projeto-da-video-aula/platformer_project_2/: Platformer.py  map.txt
projeto-da-video-aula/platformer_project_9(1)/: platformer.py
