[tool.poetry]
name = "My first game in python, use pygame"
version = "0.1.0"
description = "It's a project to familiarize myself with the pygame lib. Who knows, I might not continue."
authors = ["FabricioPatrocinio <fabricioschiffer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
